Alterações pedidas para o merge

--- a/src/index.html
+++ b/src/index.html
@@ -154,7 +154,7 @@
         </main>
       </article>
     </div>
-    <div class="modal modal_opened">
+    <div class="modal">
       <article class="modal__container modal_container_sucess">
         <h2 class="modal__title">Pedido Finalizado</h2>
         <p class="modal__text">Seu pedido foi finalizado com sucesso</p>
