alterando cor para hsl

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                 src="./images/bebidas.svg"
                 alt="Bebidas"
               />
-              <span class="categories__text">Bebidas</span>
+              <span class="categories__text text">Bebidas</span>
             </button>
           </li>
           <li class="categorie">
@@ -35,7 +35,7 @@
                 src="./images/doces.svg"
                 alt="Bebidas"
               />
-              <span class="categories__text">Doces</span>
+              <span class="categories__text text">Doces</span>
             </button>
           </li>
           <li class="categorie">
@@ -45,7 +45,7 @@
                 src="./images/lanches.svg"
                 alt="Bebidas"
               />
-              <span class="categories__text">Lanches</span>
+              <span class="categories__text text">Lanches</span>
             </button>
           </li>
         </ul>
