--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/index.css" />
-    <script defer src="scripts/index.js"></script>
+    <script type="module" defer src="scripts/index.js"></script>
     <title>Practicum PDV</title>
   </head>
   <body>
