--- a/src/index.html
+++ b/src/index.html
@@ -44,5 +44,56 @@
       </ul>
       <hr class="menu__ruler" />
     </nav>
+    <main>
+      <section>
+        <ul>
+          <li>
+            <article class="product">
+              <p class="product__price">R$ 6,00</p>
+              <p class="product__name">Coca Cola</p>
+              <button class="product__button">Selecionar Coca</button>
+            </article>
+          </li>
+          <li>
+            <article class="product">
+              <p class="product__price">R$ 5,00</p>
+              <p class="product__name">Guaraná</p>
+              <button class="product__button">Selecionar Guaraná</button>
+            </article>
+          </li>
+        </ul>
+      </section>
+      <aside class="order">
+        <h2>Resumo da Venda</h2>
+        <p>José Costa</p>
+        <ul class="order__list">
+          <template id="template-item">
+            <li class="order__item item">
+              <div>
+                <p class="item__name"></p>
+                <p class="item__price"></p>
+              </div>
+              <button>-</button>
+              <p class="item__quantity">1</p>
+              <button>+</button>
+              <p class="item__total"></p>
+            </li>
+          </template>
+        </ul>
+        <div>
+          <p>Sub Total</p>
+          <p class="order__subtotal">R$ 0,00</p>
+        </div>
+        <div>
+          <p>Descontos</p>
+          <p>R$ 0,00</p>
+        </div>
+        <div>
+          <p>Total</p>
+          <p class="order__total">R$ 0,00</p>
+        </div>
+      </aside>
+    </main>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
