--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <nav class="menu">
       <ul class="menu__bar">
         <li>
-          <button class="button">
+          <button class="btn-menu">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="32"
@@ -27,7 +27,7 @@
           </button>
         </li>
         <li>
-          <button class="button">
+          <button class="btn-menu">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="30"
@@ -66,7 +66,7 @@
           </button>
         </li>
         <li>
-          <button class="button">
+          <button class="btn-menu">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="32"
