ADD buttons css

--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,8 @@
       <hr class="menu__ruler" />
     </nav>
     <main>
+
+      <button class="button_success">TESTE</button>
       <section>
         <ul class="products">
           <template id="product-card">
@@ -62,14 +64,14 @@
             <article class="product">
               <p class="product__price">R$ 6,00</p>
               <p class="product__name">Coca Cola</p>
-              <button class="product__button">Selecionar</button>
+              <button class="product__button button">Selecionar</button>
             </article>
           </li>
           <li>
             <article class="product">
               <p class="product__price">R$ 5,00</p>
               <p class="product__name">Guaraná</p>
-              <button class="product__button">Selecionar</button>
+              <button class="product__button button">Selecionar</button>
             </article>
           </li>
         </ul>
