feature/ sale-summary

--- a/index.html
+++ b/index.html
@@ -104,7 +104,55 @@
             </li>
           </ul>
         </div>
+        <div class="products__sale-summary">
+          <div class="products__sale-summary__top">
+            <header class="products__sale-summary__header">
+              <h3 class="products__sale-summary__text">Resumo da Venda</h3>
+              <p class="products__sale-summary__description">José Costa</p>
+            </header>
+            <div class="products__sale-summary__grey-line"></div>
+          </div>
+          <div class="products__sale-summary__bottom">
+            <ul class="products__sale-summary__itens">
+              <li class="products__sale-summary__item">
+                <div class="products__sale-summary__item__description">
+                  <p class="products__sale-summary__text">Bolo de chocolate</p>
+                  <p class="products__sale-summary__description">R$8,00</p>
+                </div>
+                <div class="products__sale-summary__item__interaction">
+                  <button
+                    class="products__sale-summary__item__interaction__remove"
+                    type="button"
+                  ></button>
+                  <p class="products__sale-summary__text">1</p>
+                  <button
+                    class="products__sale-summary__item__interaction__add"
+                    type="button"
+                  ></button>
+                </div>
+                <p class="products__sale-summary__text">R$8,00</p>
+              </li>
+            </ul>
+            <div class="products__sale-summary__grey-line"></div>
+            <div class="products__sale-summary__subtotal-container">
+              <div class="products__sale-summary__subtotal">
+                <p class="products__sale-summary__text">Sub total</p>
+                <p class="products__sale-summary__description">Descontos</p>
+              </div>
+              <div class="products__sale-summary__subtotal">
+                <p class="products__sale-summary__text">R$8,00</p>
+                <p class="products__sale-summary__description">R$0,00</p>
+              </div>
+            </div>
+            <div class="products__sale-summary__total">
+              <p class="products__sale-summary__text">Total</p>
+              <p class="products__sale-summary__text">R$8,00</p>
+            </div>
+            <button class="products__sale-summary__submit">Finalizar</button>
+          </div>
+        </div>
+        <button type="button" class="products__sale-summary__open-button">Resumo de Vendas</button>
       </section>
-    </div>  
+    </div>
   </body>
 </html>
