--- a/src/index.html
+++ b/src/index.html
@@ -135,6 +135,7 @@
               name="price"
               type="number"
               required
+              step="0.01"
             />
             <p class="error">Campo obrigatório</p>
           </div>
