--- a/src/index.html
+++ b/src/index.html
@@ -154,7 +154,6 @@
         </form>
       </div>
     </div>
-    <script src="./scripts/validate.js"></script>
-    <script src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
