--- a/index.html
+++ b/index.html
@@ -3,9 +3,99 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./pages/index.css" />
     <title>PDV</title>
   </head>
   <body>
-    PDV
+    <div class="page">
+      <nav class="navegacao">
+        <ul class="menuNavegacao">
+          <li class="menuNavegacao__item">
+            <a class="menuNavegacao__link" href="#">
+              <svg
+                width="32"
+                height="32"
+                viewBox="0 0 32 32"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M31.6786 4.67317L27.2921 0.286719C27.079 0.11185 26.8085 0.0224843 26.5332 0.0360057C26.2579 0.049527 25.9975 0.164968 25.8026 0.359875C25.6077 0.554781 25.4922 0.815217 25.4787 1.09052C25.4652 1.36583 25.5546 1.63633 25.7294 1.84939L25.935 2.0413L18.3821 7.71628L13.1321 8.77177C12.9218 8.81416 12.7273 8.91377 12.5701 9.05963L0.973367 20.67C0.665016 20.9747 0.420205 21.3376 0.25312 21.7376C0.0860355 22.1376 0 22.5668 0 23.0003C0 23.4338 0.0860355 23.863 0.25312 24.263C0.420205 24.6631 0.665016 25.0259 0.973367 25.3306L6.63464 30.9919C6.93934 31.3003 7.30222 31.5451 7.70223 31.7122C8.10224 31.8792 8.53144 31.9653 8.96494 31.9653C9.39845 31.9653 9.82764 31.8792 10.2277 31.7122C10.6277 31.5451 10.9905 31.3003 11.2952 30.9919L22.9056 19.3952C23.0515 19.2379 23.1511 19.0435 23.1935 18.8332L24.249 13.5832L29.924 6.03023L30.1159 6.23585C30.3255 6.43853 30.6056 6.55182 30.8972 6.55182C31.1888 6.55182 31.4689 6.43853 31.6786 6.23585C31.8845 6.02794 32 5.74714 32 5.45451C32 5.16188 31.8845 4.88108 31.6786 4.67317ZM12.2548 26.9344L5.03084 19.7105L11.1582 13.5832L18.3821 20.8071L12.2548 26.9344ZM8.1836 29.4429L2.52233 23.7817C2.41872 23.6796 2.33644 23.558 2.28027 23.4239C2.22411 23.2897 2.19518 23.1458 2.19518 23.0003C2.19518 22.8549 2.22411 22.7109 2.28027 22.5768C2.33644 22.4427 2.41872 22.321 2.52233 22.219L3.48187 21.2595L10.7058 28.4834L9.74628 29.4429C9.53837 29.6489 9.25757 29.7644 8.96494 29.7644C8.67231 29.7644 8.39151 29.6489 8.1836 29.4429ZM22.3436 12.4728C22.2493 12.6038 22.1839 12.7533 22.1517 12.9115L21.1099 18.0793L19.9311 19.2581L12.7071 12.0342L13.886 10.8553L19.0538 9.81355C19.212 9.78142 19.3615 9.716 19.4924 9.62164L27.4977 3.61768L28.3476 4.46756L22.3436 12.4728Z"
+                  fill="#ABABAB"
+                />
+              </svg>
+              Bebidas
+            </a>
+          </li>
+          <li class="menuNavegacao__item">
+            <a class="menuNavegacao__link" href="#">
+              <svg
+                width="40"
+                height="40"
+                viewBox="0 0 40 40"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M22.5 11.667L7.5 18.2503H32.5L28.3333 12.5003"
+                  stroke="#ABABAB"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M25.8333 14.1667C27.6743 14.1667 29.1667 12.6743 29.1667 10.8333C29.1667 8.99238 27.6743 7.5 25.8333 7.5C23.9924 7.5 22.5 8.99238 22.5 10.8333C22.5 12.6743 23.9924 14.1667 25.8333 14.1667Z"
+                  fill="#ABABAB"
+                  stroke="#ABABAB"
+                  stroke-width="2"
+                />
+                <path
+                  d="M27.5 7.50016L29.1667 3.3335"
+                  stroke="#ABABAB"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                />
+                <path
+                  d="M7.91683 22.4644C7.41516 22.7144 6.9485 22.981 6.5185 23.261C4.51516 24.5677 3.3335 26.1769 3.3335 27.9169C3.3335 32.2894 10.7952 35.8335 20.0002 35.8335C29.2052 35.8335 36.6668 32.2894 36.6668 27.9169C36.6668 26.1335 35.4268 24.4894 33.3335 23.166"
+                  stroke="#ABABAB"
+                  stroke-width="2"
+                />
+                <path
+                  d="M7.5 18.3335H32.5V28.3335H7.5V18.3335Z"
+                  stroke="#ABABAB"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M7.5 18.3335H33.3333"
+                  stroke="#ABABAB"
+                  stroke-width="2"
+                />
+              </svg>
+              Doces
+            </a>
+          </li>
+          <li class="menuNavegacao__item">
+            <a class="menuNavegacao__link" href="#">
+              <svg
+                width="32"
+                height="32"
+                viewBox="0 0 32 32"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M23.9998 14.6665V7.99984H19.9998V5.33317H15.9998V2.6665H10.6665V6.6665H7.99984V14.6665H6.6665L9.33317 29.3332H22.6665L25.3332 14.6665H23.9998ZM21.1465 14.6665C20.9332 15.4798 20.5332 16.2132 19.9998 16.8265V11.4932L22.6665 12.8265V14.6665H21.1465ZM22.6665 9.33317V11.3332L19.9998 9.99984V9.33317H22.6665ZM15.9998 6.6665H18.6665V11.3332L15.9998 12.6665V6.6665ZM15.9998 14.1598L18.6665 12.8265V17.9332C17.8798 18.3998 16.9732 18.6665 15.9998 18.6665V14.1598ZM14.6665 18.4798C13.6132 18.1998 12.6665 17.6265 11.9998 16.8265V12.8265L14.6665 11.4932V18.4798ZM11.9998 3.99984H14.6665V9.99984L13.3332 10.6665V6.6665H11.9998V3.99984ZM9.33317 7.99984H11.9998V11.3332L10.6665 11.9998V14.6665H9.33317V7.99984Z"
+                  fill="#ABABAB"
+                />
+              </svg>
+              Laches
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <div class="page__linha"></div>
+    </div>
   </body>
 </html>
