refactor: bloco navegação resposividade e borda separadora

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div class="page">
-      <nav class="navegacao">
-        <ul class="menuNavegacao">
-          <li class="menuNavegacao__item">
-            <a class="menuNavegacao__link" href="#">
+      <nav class="navigation">
+        <ul class="navigation__menu">
+          <li class="navigation__item">
+            <button class="navigation__button">
               <svg
                 width="32"
                 height="32"
@@ -25,10 +25,10 @@
                 />
               </svg>
               Bebidas
-            </a>
+            </button>
           </li>
-          <li class="menuNavegacao__item">
-            <a class="menuNavegacao__link" href="#">
+          <li class="navigation__item navigation__item--hover">
+            <button class="navigation__button">
               <svg
                 width="40"
                 height="40"
@@ -74,10 +74,10 @@
                 />
               </svg>
               Doces
-            </a>
+            </button>
           </li>
-          <li class="menuNavegacao__item">
-            <a class="menuNavegacao__link" href="#">
+          <li class="navigation__item">
+            <button class="navigation__button">
               <svg
                 width="32"
                 height="32"
@@ -90,12 +90,11 @@
                   fill="#ABABAB"
                 />
               </svg>
-              Laches
-            </a>
+              Lanches
+            </button>
           </li>
         </ul>
       </nav>
-      <div class="page__linha"></div>
     </div>
   </body>
 </html>
