--- a/index.html
+++ b/index.html
@@ -132,8 +132,7 @@
       <img src="" alt="" class="popup__image">
     </div>
   </div>
-  <script src="./scripts/index.js"></script>
-  <script src="./scripts/validate.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
 </body>
 
 </html>
