--- a/src/index.html
+++ b/src/index.html
@@ -28,20 +28,38 @@
           X
         </button>
         <h2>Novo Produto</h2>
-        <form class="form">
+        <form class="form" novalidate autocomplete="off">
           <div>
             <label>Nome:</label>
-            <input name="name" class="form__input form__input_name" />
+            <input
+              name="name"
+              class="form__input form__input_name"
+              required
+              minlength="2"
+            />
+            <p class="form__error">Name</p>
           </div>
           <div>
             <label>Preço:</label>
-            <input name="price" class="form__input form__input_price" />
+            <input
+              name="price"
+              class="form__input form__input_price"
+              type="number"
+              step="0.01"
+              required
+            />
+            <p class="form__error">Price</p>
           </div>
           <div>
             <label>Imagem:</label>
-            <input name="image" class="form__input form__input_image" />
+            <input
+              name="image"
+              class="form__input form__input_image"
+              type="url"
+            />
+            <p class="form__error"></p>
           </div>
-          <button type="submit">Salvar</button>
+          <button type="submit" class="form__submit" disabled>Salvar</button>
         </form>
       </section>
     </div>
@@ -52,5 +70,6 @@
       <img class="popup__image" src="" alt="" />
     </div>
   </body>
-  <script src="./index.js"></script>
+  <script src="./scripts/index.js"></script>
+  <script src="./scripts/validate.js"></script>
 </html>
