--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,5 @@
       <img class="popup__image" src="" alt="" />
     </div>
   </body>
-  <script src="./scripts/index.js"></script>
-  <script src="./scripts/validate.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
 </html>
