--- a/src/index.html
+++ b/src/index.html
@@ -87,8 +87,11 @@
             </li>
           </template>
         </ul>
-        <div class="action-buttons">
-          <button id="open-product-modal" class="button button_type_success">
+        <div class="cta">
+          <button id="open-product-popup" class="button button_type_primary">
+            Editar itens
+          </button>
+          <button id="open-product-popup" class="button button_type_success">
             Adicionar item
           </button>
         </div>
@@ -141,58 +144,72 @@
         </aside>
       </main>
     </div>
-    <div class="modal modal_create-product">
-      <article class="modal__container modal__container_product">
+    <div class="popup popup_edit_profile">
+      <article class="popup__container popup__container_product">
+        <header>
+          <h1>Editar Perfil</h1>
+          <button id="close-product-popup">X</button>
+        </header>
+        <form class="form">
+          <div class="form__control">
+            <label class="form__label" for="name">Nome:</label>
+            <input class="form__input" name="name" id="name" />
+          </div>
+          <div class="form__control">
+            <label class="form__label" for="about">Sobre:</label>
+            <input class="form__input" id="about" />
+          </div>
+          <button name="button_submit" class="button button_type_success">
+            Salvar
+          </button>
+        </form>
+      </article>
+    </div>
+    <div class="popup popup_create-product">
+      <article class="popup__container popup__container_product">
         <header>
           <h1>Novo Produto</h1>
-          <button id="close-product-modal">X</button>
+          <button id="close-product-popup">X</button>
         </header>
-        <main>
-          <form name="form-product" class="form" novalidate>
-            <div class="form__control">
-              <label class="form__label" for="image">Imagem do Produto</label>
-              <input type="url" class="form__input" name="image" id="image" />
-            </div>
-            <div class="form__control">
-              <label class="form__label" for="name">Nome do Produto</label>
-              <input class="form__input" name="name" id="name" required />
-              <p class="form__error">Campo obrigatório</p>
-            </div>
-            <div class="form__control">
-              <label class="form__label" for="price">Preço do Produto</label>
-              <input
-                class="form__input"
-                type="number"
-                name="price"
-                id="price"
-                required
-              />
-              <p class="form__error">Campo obrigatório</p>
-            </div>
-            <div class="form__control">
-              <label class="form__label" for="category"
-                >Categoria do Produto
-              </label>
-              <select
-                class="form__input"
-                name="category"
-                id="category"
-                required
-              >
-                <option value="Bebidas">Bebidas</option>
-                <option value="Doces">Doces</option>
-                <option value="Lanches">Lanches</option>
-              </select>
-            </div>
-            <button
-              name="button_submit"
-              class="button button_type_success"
-              disabled
-            >
-              Salvar Produto
-            </button>
-          </form>
-        </main>
+        <form name="form-product" class="form" novalidate>
+          <div class="form__control">
+            <label class="form__label" for="image">Imagem do Produto</label>
+            <input type="url" class="form__input" name="image" id="image" />
+          </div>
+          <div class="form__control">
+            <label class="form__label" for="name">Nome do Produto</label>
+            <input class="form__input" name="name" id="name" required />
+            <p class="form__error">Campo obrigatório</p>
+          </div>
+          <div class="form__control">
+            <label class="form__label" for="price">Preço do Produto</label>
+            <input
+              class="form__input"
+              type="number"
+              name="price"
+              id="price"
+              required
+            />
+            <p class="form__error">Campo obrigatório</p>
+          </div>
+          <div class="form__control">
+            <label class="form__label" for="category"
+              >Categoria do Produto
+            </label>
+            <select class="form__input" name="category" id="category" required>
+              <option value="Bebidas">Bebidas</option>
+              <option value="Doces">Doces</option>
+              <option value="Lanches">Lanches</option>
+            </select>
+          </div>
+          <button
+            name="button_submit"
+            class="button button_type_success"
+            disabled
+          >
+            Salvar Produto
+          </button>
+        </form>
       </article>
     </div>
 
