feat: add profile edit feats

--- a/src/index.html
+++ b/src/index.html
@@ -153,11 +153,20 @@
           <form class="form">
             <div class="form__control">
               <label class="form__label" for="name">Nome:</label>
-              <input class="form__input" name="name" id="name" />
+              <input
+                class="form__input form__input_name"
+                name="name"
+                id="name"
+                value="Julian Ferrero"
+              />
             </div>
             <div class="form__control">
-              <label class="form__label" for="about">Sobre:</label>
-              <input class="form__input" id="about" />
+              <label class="form__label" for="job">Posição:</label>
+              <input
+                class="form__input form__input_job"
+                id="job"
+                value="Marketing"
+              />
             </div>
             <button name="button_submit" class="button button_type_success">
               Salvar
