fix: update popup & product

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
           </article>
         </div>
         <ul class="products">
-          <template id="product-card">
+          <template id="product-template">
             <li class="product">
               <p class="product__category"></p>
               <img class="product__image" />
@@ -89,10 +89,10 @@
           </template>
         </ul>
         <div class="cta">
-          <button id="open-product-popup" class="button button_type_primary">
+          <button class="button button_type_primary cta_product_edit">
             Editar itens
           </button>
-          <button id="open-product-popup" class="button button_type_success">
+          <button class="button button_type_success cta_product_add">
             Adicionar item
           </button>
         </div>
