--- a/src/index.html
+++ b/src/index.html
@@ -153,11 +153,20 @@
           <form class="form">
             <div class="form__control">
               <label class="form__label" for="name">Nome:</label>
-              <input class="form__input" name="name" id="name" />
+              <input
+                class="form__input form__input_name"
+                name="name"
+                id="name"
+                value="Julian Ferrero"
+              />
             </div>
             <div class="form__control">
-              <label class="form__label" for="about">Sobre:</label>
-              <input class="form__input" id="about" />
+              <label class="form__label" for="job">Posição:</label>
+              <input
+                class="form__input form__input_job"
+                id="job"
+                value="Marketing"
+              />
             </div>
             <button name="button_submit" class="button button_type_success">
               Salvar
@@ -165,51 +174,67 @@
           </form>
         </article>
       </div>
+      <div class="popup popup_image">
+        <div class="popup__image-container">
+          <button class="popup__close-button popup__close-button_image">
+            X
+          </button>
+          <img src="" alt="Imagem do Produto" class="popup__image" />
+          <span class="popup__image-caption"></span>
+        </div>
+      </div>
     </div>
-    <div class="popup popup_create-product">
-      <article class="popup__container popup__container_product">
-        <header>
-          <h1>Novo Produto</h1>
-          <button id="close-product-popup">X</button>
+    <div class="popup popup_product">
+      <article class="popup__container">
+        <header class="popup__header">
+          <h1 class="popup__title">Novo Produto</h1>
+          <button class="popup__close-button">X</button>
         </header>
-        <form name="form-product" class="form" novalidate>
+        <form name="form-product" class="form">
           <div class="form__control">
             <label class="form__label" for="image">Imagem do Produto</label>
-            <input type="url" class="form__input" name="image" id="image" />
+            <input
+              type="url"
+              class="form__input form__input_image"
+              name="image"
+              id="image"
+            />
           </div>
           <div class="form__control">
             <label class="form__label" for="name">Nome do Produto</label>
-            <input class="form__input" name="name" id="name" required />
-            <p class="form__error">Campo obrigatório</p>
+            <input
+              class="form__input form__input_name"
+              name="name"
+              id="name"
+              required
+            />
           </div>
           <div class="form__control">
             <label class="form__label" for="price">Preço do Produto</label>
             <input
-              class="form__input"
+              class="form__input form__input_price"
               type="number"
               name="price"
               id="price"
               required
             />
-            <p class="form__error">Campo obrigatório</p>
           </div>
           <div class="form__control">
             <label class="form__label" for="category"
               >Categoria do Produto
             </label>
-            <select class="form__input" name="category" id="category" required>
+            <select
+              class="form__input form__input_category"
+              name="category"
+              id="category"
+              required
+            >
               <option value="Bebidas">Bebidas</option>
               <option value="Doces">Doces</option>
               <option value="Lanches">Lanches</option>
             </select>
           </div>
-          <button
-            name="button_submit"
-            class="button button_type_success"
-            disabled
-          >
-            Salvar Produto
-          </button>
+          <button class="button button_type_success">Salvar Produto</button>
         </form>
       </article>
     </div>
